Upgrade dependencies:  MapLibre, Astro, Leaflet

--- a/demo/src/pages/mapkit.mdx
+++ b/demo/src/pages/mapkit.mdx
@@ -5,7 +5,11 @@ draft: false
 ---
 import { MapKit } from "maps-withastro"
 
-MapKit with Astro, interactive="false"
+MapKit with Astro, Be sure to set jwt to a valid token.
+
+* `interactive="false"`
+* `showstileinfo="true"`
+
 
 <MapKit
   container="mapkitmap-interactive-false"
