Fetch JWT from the passed in server

--- a/test/src/pages/mapkit.mdx
+++ b/test/src/pages/mapkit.mdx
@@ -21,5 +21,5 @@ MapKit with Astro, Be sure to set jwt to a valid token.
   maptype="Hybrid"
   containerstyle="width: 512px; height: 512px"
   showstileinfo="true"
-  jwt="https://maps-withastro.roblabs.com/domain-restricted.jwt"
+  jwt="https://maps-withastro.roblabs.com/maps-withastro.roblabs.com.jwt"
 />
